--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^6.1.2
   cloud_firestore: ^6.1.0
   go_router: ^17.0.0
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
