--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Build Web
         run: |
           flutter config --enable-web
-          flutter build web --release --web-renderer html
+          flutter build web --release
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
